--- a/NaNoEweb/wwwroot/css/site.scss
+++ b/NaNoEweb/wwwroot/css/site.scss
@@ -96,8 +96,8 @@ nav {
     text-align: center;
 }
 
-// Div scrollbars
-div {
+// Scrollbars
+* {
     &::-webkit-scrollbar {
         height: 5px;
         width: 5px;
